UPDATE: open-meto_api.ipynb, open-meteo dataset and requirements.txt

--- a/open-meteo_api.ipynb
+++ b/open-meteo_api.ipynb
@@ -221,18 +221,16 @@
     "    params['latitude'] = latitude\n",
     "    params['longitude'] = longitude\n",
     "\n",
-    "    for attempt in range(3):\n",
-    "        try:\n",
-    "            responses = openmeteo.weather_api(url, params=params)\n",
-    "            responses_list.extend(responses)\n",
-    "            print(f\"Downloaded: Start Point ({location_start}), Stop Point ({location_stop})\")\n",
-    "            break\n",
-    "        \n",
-    "        except Exception as e:\n",
-    "            print(f\"Stop downloading at Start Point ({location_start}), Stop Point ({location_stop}): {e}\")\n",
-    "            sleep(60) # Preventing Minutely API request limit exceed.\n",
-    "            continue\n",
-    "        "
+    "    try:\n",
+    "        responses = openmeteo.weather_api(url, params=params)\n",
+    "        responses_list.extend(responses)\n",
+    "        print(f\"Downloaded: Start Point ({location_start}), Stop Point ({location_stop})\")\n",
+    "        continue\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"Stop downloading at Start Point ({location_start}), Stop Point ({location_stop}): {e}\")\n",
+    "        sleep(60) # Preventing Minutely API request limit exceed.\n",
+    "        break"
    ]
   },
   {
@@ -295,11 +293,12 @@
     "\tdaily_data[\"et0_fao_evapotranspiration\"] = daily_et0_fao_evapotranspiration\n",
     "\n",
     "\tdaily_dataframe = pd.DataFrame(data = daily_data)\n",
-    "\tdaily_dataframe = daily_dataframe.groupby(pd.Grouper(key='date', freq='1M')).median()\n",
-    "\tdaily_dataframe = daily_dataframe[(daily_dataframe.index.tz_localize(None).to_pydatetime() >= start_date) &\n",
-    "\t\t\t\t\t\t\t\t   \t  (daily_dataframe.index.tz_localize(None).to_pydatetime() <= end_date)]\n",
+    "\tdaily_dataframe = daily_dataframe.groupby(pd.Grouper(key='date', freq='1M')).median() # Group by month\n",
+    "\tdaily_dataframe = daily_dataframe[(daily_dataframe.index.tz_localize(None).to_pydatetime() >= start_date) & \n",
+    "\t\t\t\t\t\t\t\t   \t  (daily_dataframe.index.tz_localize(None).to_pydatetime() <= end_date)] # Filter out dates that aren't in the time series if we accidently got one.\n",
     "\tdaily_dataframe = daily_dataframe.T\n",
     "\n",
+    "\t# Determine which location of data frame should we start inputing data\n",
     "\tif start_point == 0:\n",
     "\t\tfor variable in variable_dict.keys():\n",
     "\t\t\tvariable_dict[variable].iloc[responses_list.index(response), ] = daily_dataframe.loc[variable]\n",
