UPDATE: open-meteo_api.ipynb and requirements.txt

--- a/open-meteo_api.ipynb
+++ b/open-meteo_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,9 +190,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start point: 300\n",
+      "Downloaded: Start Point (300), Stop Point (450)\n",
+      "Stop downloading at Start Point (450), Stop Point (600): {'error': True, 'reason': 'Hourly API request limit exceeded. Please try again in the next hour.'}\n"
+     ]
+    }
+   ],
    "source": [
     "variable_dict = create_variable_template(hazard_df, time_series='monthly')\n",
     "variable_dict = detect_exist_dataset(variable_dict, start_date, end_date, time_series='monthly')\n",
@@ -293,25 +303,29 @@
     "\tdaily_data[\"et0_fao_evapotranspiration\"] = daily_et0_fao_evapotranspiration\n",
     "\n",
     "\tdaily_dataframe = pd.DataFrame(data = daily_data)\n",
-    "\tdaily_dataframe = daily_dataframe.groupby(pd.Grouper(key='date', freq='1M')).median() # Group by month\n",
+    "\tdaily_dataframe = daily_dataframe.groupby(pd.Grouper(key='date', freq='1ME')).median() # Group by month\n",
     "\tdaily_dataframe = daily_dataframe[(daily_dataframe.index.tz_localize(None).to_pydatetime() >= start_date) & \n",
     "\t\t\t\t\t\t\t\t   \t  (daily_dataframe.index.tz_localize(None).to_pydatetime() <= end_date)] # Filter out dates that aren't in the time series if we accidently got one.\n",
     "\tdaily_dataframe = daily_dataframe.T\n",
     "\n",
     "\t# Determine which location of data frame should we start inputing data\n",
-    "\tif start_point == 0:\n",
-    "\t\tfor variable in variable_dict.keys():\n",
-    "\t\t\tvariable_dict[variable].iloc[responses_list.index(response), ] = daily_dataframe.loc[variable]\n",
-    "\telse:\n",
-    "\t\tfor variable in variable_dict.keys():\n",
-    "\t\t\tvariable_dict[variable].iloc[responses_list.index(response) + start_point, ] = daily_dataframe.loc[variable]\n",
+    "\ttry:\n",
+    "\t\tif start_point == 0:\n",
+    "\t\t\tfor variable in variable_dict.keys():\n",
+    "\t\t\t\tvariable_dict[variable].iloc[responses_list.index(response)] = daily_dataframe.loc[variable]\n",
+    "\t\telse:\n",
+    "\t\t\tfor variable in variable_dict.keys():\n",
+    "\t\t\t\tvariable_dict[variable].iloc[responses_list.index(response) + start_point] = daily_dataframe.loc[variable]\n",
+    "\texcept Exception as e:\n",
+    "\t\tprint(f'Error at index {responses_list.index(response)} of response_list')\n",
+    "\t\tprint(f'Error message: {e}')\n",
     "\t\n",
     "\tprint(f\"Inputing {response.Latitude()}°N {response.Longitude()}°E, Elevation {response.Elevation()} m asl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
