UPDATE: QNet FNet

--- a/FNet.ipynb
+++ b/FNet.ipynb
@@ -29,6 +29,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Import Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(r'')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Fit model"
    ]
   },
