--- a/QNet.ipynb
+++ b/QNet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,17 +91,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X shape: (40, 12, 2)\n",
+      "y shape: (39, 12)\n"
+     ]
+    }
+   ],
    "source": [
-    "df_ptt_2014 = df.iloc[0]\n",
-    "df_ptt_2022 = df.iloc[1]"
+    "X = df.iloc[0::2]\n",
+    "y = df.iloc[1::2]\n",
+    "\n",
+    "X_2014 = np.array(X).reshape((40, 12, 2), order='F')\n",
+    "print(f'X shape: {X_2014.shape}')\n",
+    "y_2022 = np.array(y.iloc[:, 12:])\n",
+    "print(f'y shape: {y_2022.shape}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -114,6 +128,9 @@
     }
    ],
    "source": [
+    "df_ptt_2014 = df.iloc[0]\n",
+    "df_ptt_2022 = df.iloc[1]\n",
+    "\n",
     "ppt_2014 = np.array(df_ptt_2014).reshape((12, 2), order='F')\n",
     "print(f'X shape: {ppt_2014.shape}')\n",
     "ppt_2022 = np.array(df_ptt_2022.iloc[:12])\n",
@@ -129,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +165,7 @@
        "((1, 12, 2), (1, 12, 1))"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
